libs/preprocessor/tests/errors/pe2_unexpected_eof/stderr.ansi
[0m[1m[38;5;9merror[PE2][0m[1m: unexpected end of file[0m
  [0m[36m┌─[0m source.hpp:1:2
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #[0m[31mif[0m
  [0m[36m│[0m  [0m[31m^^[0m [0m[31munexpected end of file[0m

